# KEDRO-Flight-price-prediction

./: .gitignore  README.md  requirements.txt
flight-price-prediction-kedro/: README.md  pyproject.toml  session_store.db
flight-price-prediction-kedro/.viz/: stats.json
flight-price-prediction-kedro/conf/: logging.yml
flight-price-prediction-kedro/conf/base/: catalog.yml  parameters_data_science.yml
flight-price-prediction-kedro/docs/source/: conf.py  index.rst
flight-price-prediction-kedro/notebooks/: data.ipynb  data_exploring.ipynb  training_data.ipynb
flight-price-prediction-kedro/src/flight_price_prediction_kedro/: __init__.py  __main__.py
flight-price-prediction-kedro/src/flight_price_prediction_kedro/pipelines/data_processing/: nodes.py  pipeline.py
flight-price-prediction-kedro/src/flight_price_prediction_kedro/pipelines/data_science/: nodes.py  pipeline.py
