[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "flight_price_prediction_kedro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
flight-price-prediction-kedro = "flight_price_prediction_kedro.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.21", "sphinx>=5.3,<7.3", "sphinx_rtd_theme==2.0.0", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.20.2", "sphinx_copybutton==0.5.2", "ipykernel>=5.3, <7.0", "Jinja2<3.2.0", "myst-parser>=1.0,<2.1",]

[tool.kedro]
package_name = "flight_price_prediction_kedro"
project_name = "flight-price-prediction-kedro"
kedro_init_version = "0.19.9"
tools = "['Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "flight_price_prediction_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
